# DMM-enigma2-plugin-curlytx

./: Makefile.am  configure.ac
